[gd_scene load_steps=44 format=2]

[ext_resource path="res://Resources/Textures/Mapa.png" type="Texture" id=1]
[ext_resource path="res://Scenes/bath_salts1/bath_salts_dispenser1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Textures/PlacasErvas_23x21.png" type="Texture" id=3]
[ext_resource path="res://Scenes/bath_salts1/yellow_dispenser.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/room/room.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/window/window.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/climate/climate_manager.gd" type="Script" id=7]
[ext_resource path="res://Scenes/player/player.gd" type="Script" id=8]
[ext_resource path="res://Resources/SFX/jump1.wav" type="AudioStream" id=9]
[ext_resource path="res://Resources/SFX/jump3.wav" type="AudioStream" id=10]
[ext_resource path="res://Resources/SFX/grab.wav" type="AudioStream" id=11]
[ext_resource path="res://Resources/SFX/throw.wav" type="AudioStream" id=12]
[ext_resource path="res://Resources/Textures/Mizuni_Sprites.png" type="Texture" id=13]
[ext_resource path="res://Scenes/coal/coal.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/ice/ice.tscn" type="PackedScene" id=15]
[ext_resource path="res://Resources/Panels/request.tres" type="StyleBox" id=16]
[ext_resource path="res://Resources/Fonts/96.tres" type="DynamicFont" id=17]
[ext_resource path="res://Resources/Textures/HUD.png" type="Texture" id=18]
[ext_resource path="res://Resources/Textures/BarraHUD.png" type="Texture" id=19]
[ext_resource path="res://Resources/Textures/Seta.png" type="Texture" id=20]
[ext_resource path="res://Resources/Textures/Menu1.png" type="Texture" id=21]
[ext_resource path="res://Resources/Textures/Menu2.png" type="Texture" id=22]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 5, 145 )

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 250, 5 )

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 5, 34 )

[sub_resource type="RectangleShape2D" id=4]

extents = Vector2( 115, 5 )

[sub_resource type="GDScript" id=5]

script/source = "extends StaticBody2D
func _ready(): global.platforms = self"

[sub_resource type="RectangleShape2D" id=6]

extents = Vector2( 23.5282, 4.49941 )

[sub_resource type="GDScript" id=7]

resource_name = "room_right"
script/source = "extends Area2D
###If someone actually looks at the source code of this game, please notice that
###I think I should have used a FSM here... welp, too late I guess.

###And I could have used a matrix or something like that for the types of requests, but... yeah, I dunno.
var types_of_request = [
	'00',
	'01',
	'02',
	'10',
	'11',
	'12']

var type_index = 0
var salt_index = 0
var temperature_index = 0

var ready_for_next = true
var move_to_ofuro = false
var move_to_exit = false

var request = preload(\"res://Scenes/requests/request1.tscn\")
var ghost = preload(\"res://Scenes/ghost/ghost.tscn\")
var current_request
var current_ghost


func _ready():
#	$tmr_next.wait_time = rand_range(2.0, 4.0)
	$tmr_still.wait_time = rand_range(5, 10)
	$tmr_next.start()
	add_to_group('Door')
	set_process(true)

func _process(delta):
	if move_to_ofuro:
		$path_2d/path_follow_2d.unit_offset = lerp($path_2d/path_follow_2d.unit_offset, 0.99, 0.01)
		if $path_2d/path_follow_2d.unit_offset > 0.95:
			move_to_ofuro = false
			$tmr_still.wait_time = rand_range(12.5, 25.0)
			$tmr_still.start()
	if move_to_exit:
		$path_2d/path_follow_2d.unit_offset = lerp($path_2d/path_follow_2d.unit_offset, 0.01, 0.01)
		if $path_2d/path_follow_2d.unit_offset < 0.05:
			move_to_exit = false
			current_ghost.queue_free()
			current_request.queue_free()
			$tmr_next.wait_time = rand_range(5, 10.0)
			$tmr_next.start()


func _on_tmr_next_timeout():
	salt_index = randi() % 2
	temperature_index = randi() % 3

	type_index = 0
	if temperature_index == 0: type_index = 0 if salt_index == 0 else 3
	elif temperature_index == 1: type_index = 1 if salt_index == 0 else 4
	elif temperature_index == 2: type_index = 2 if salt_index == 0 else 5
	print('Se quer: ' + str(types_of_request[type_index]))

	var i = request.instance()
	i.position = Vector2()
	i.get_node('sprite').frame = type_index
	i.get_node('sprite').flip_h = true
	i.target_y_pos = $pos_request.global_position.y
	current_request = i
	add_child(i)

	var j = ghost.instance()
	j.position = Vector2()
	j.movement_direction = 1
	j.get_node('sprite').flip_h = false
	current_ghost = j
	$path_2d/path_follow_2d.add_child(j)

	move_to_ofuro = true

func _on_tmr_still_timeout():
	if str($ofuro.state_salt) + str($ofuro.state_temperature) == types_of_request[type_index]:
		global.score += 1
		global.reputation += 5
		current_ghost.satisfaction()
	else:
		global.reputation -= 20
		current_ghost.dissatisfaction()
	
	$ofuro.state_salt = $ofuro.Empty
	current_ghost.get_node('sprite').flip_h = true
	move_to_exit = true
"

[sub_resource type="Curve2D" id=8]

_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 73, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Animation" id=9]

length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/mizuni:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=10]

length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/mizuni:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=11]

loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/mizuni:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]

length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/mizuni:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 4, 3, 2 ]
}

[sub_resource type="RectangleShape2D" id=13]

extents = Vector2( 11.6667, 9.94706 )

[sub_resource type="RectangleShape2D" id=14]

extents = Vector2( 5, 14 )

[sub_resource type="GDScript" id=15]

script/source = "extends CanvasLayer

var id = self
func _ready(): global.gui_layer = id"

[sub_resource type="GDScript" id=16]

script/source = "extends Control

var pos_out = - 290#self.rect_size.y

func _ready():
	self.rect_global_position.y = pos_out
	set_process(true)

func _process(delta):
	if Input.is_action_just_pressed('ui_accept'):
		get_tree().paused = not get_tree().paused
		
#		if get_tree().paused:
#			AudioServer.add_bus_effect( AudioServer.get_bus_index('bgm'), AudioEffectLowPassFilter)
#		else:
#			AudioServer.remove_bus_effect( AudioServer.get_bus_index('bgm'), 0)
			
		var target_y = 0 if get_tree().paused else pos_out#0 if self.rect_global_position.y < -10 else pos_out
		var easing = Tween.EASE_OUT if self.rect_global_position.y < -10 else Tween.EASE_IN
		$twn_pause.interpolate_property(self, 'rect_global_position:y', self.rect_global_position.y, target_y, 0.5, Tween.TRANS_BACK, easing)
		$twn_pause.start()"

[sub_resource type="GDScript" id=17]

script/source = "extends Node2D

func _ready(): set_process(true)
func _process(delta):
	$bar.value = lerp($bar.value, global.reputation, 0.1)
	self.modulate = Color((100 - global.reputation)/100.0, 0.2 + global.reputation/100.0, 0.8)
"

[sub_resource type="Curve2D" id=18]

_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 488.531, 302.097, 0, 0, 0, 0, 406.428, 302.097 )
}

[sub_resource type="GDScript" id=19]

script/source = "extends Path2D

func _ready(): set_process(true)
func _process(delta): $path_follow_2d.unit_offset = lerp($path_follow_2d.unit_offset, global.climate_temperature/global.maximum_temperature - 0.01, 0.02)"

[sub_resource type="GDScript" id=20]

script/source = "extends Node2D

func _ready():
	get_tree().paused = true
	self.visible = true
	set_process(true)
	
func _process(delta):
	if Input.is_action_just_pressed('ui_accept'):
		print('sdasasd')
		$twn.interpolate_property(self, 'global_position:y', self.global_position.y, -320, 1.0, Tween.TRANS_QUINT, Tween.EASE_IN, 0.25)
		$twn.start()

func _on_twn_tween_completed(object, key):
	get_parent().get_node('pause').pause_mode = Node.PAUSE_MODE_PROCESS
	global.turn_the_boombox_on_m8()
	get_tree().paused = false
	yield(get_tree().create_timer(1.0), 'timeout')
	self.queue_free()"

[sub_resource type="GDScript" id=21]

script/source = "extends TextureRect

func _ready(): pass
func _on_tmr_blink_timeout(): self.visible = not self.visible
"

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 251.0, 320.0, 311.097, 111.0 ],
"_edit_vertical_guides_": [ 462.0, 389.0, 500.0, 407.428, 489.531, 197.988, 249.0 ]
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="stage" type="Node2D" parent="Control"]

[node name="sprite" type="Sprite" parent="Control/stage"]
texture = ExtResource( 1 )
centered = false

[node name="walls" type="StaticBody2D" parent="Control/stage"]
editor/display_folded = true
collision_layer = 3
collision_mask = 3

[node name="l" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 4, 145 )
shape = SubResource( 1 )

[node name="r" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 495, 145 )
shape = SubResource( 1 )

[node name="t" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 250, 4 )
shape = SubResource( 2 )

[node name="d" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 250, 286 )
shape = SubResource( 2 )

[node name="1" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 193, 30 )
shape = SubResource( 3 )

[node name="2" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 193, 216 )
shape = SubResource( 3 )

[node name="3" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 306, 216 )
shape = SubResource( 3 )

[node name="4" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 306, 30 )
shape = SubResource( 3 )

[node name="a1" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 113, 99 )
shape = SubResource( 4 )

[node name="a2" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 386, 99 )
shape = SubResource( 4 )

[node name="a3" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 103, 187 )
shape = SubResource( 4 )

[node name="a4" type="CollisionShape2D" parent="Control/stage/walls"]
position = Vector2( 395, 187 )
shape = SubResource( 4 )

[node name="platforms" type="StaticBody2D" parent="Control/stage"]
collision_layer = 3
collision_mask = 3
script = SubResource( 5 )

[node name="2" type="CollisionShape2D" parent="Control/stage/platforms"]
position = Vector2( 249.534, 144.516 )
shape = SubResource( 6 )
one_way_collision = true

[node name="3" type="CollisionShape2D" parent="Control/stage/platforms"]
position = Vector2( 249.534, 237.549 )
shape = SubResource( 6 )
one_way_collision = true

[node name="dispensers" type="Node2D" parent="Control/stage"]
editor/display_folded = true

[node name="dispenser_red" parent="Control/stage/dispensers" instance=ExtResource( 2 )]
position = Vector2( 90, 170 )

[node name="spr_red" type="Sprite" parent="Control/stage/dispensers"]
position = Vector2( 128, 166 )
texture = ExtResource( 3 )
hframes = 2

[node name="dispenser_yellow" parent="Control/stage/dispensers" instance=ExtResource( 4 )]
position = Vector2( 419.939, 170 )

[node name="spr_yellow" type="Sprite" parent="Control/stage/dispensers"]
position = Vector2( 380.939, 166 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="rooms" type="Node2D" parent="Control/stage"]
editor/display_folded = true

[node name="1" parent="Control/stage/rooms" instance=ExtResource( 5 )]

[node name="2" parent="Control/stage/rooms" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 32, 262 )

[node name="tmr_next" parent="Control/stage/rooms/2" index="4"]
wait_time = 15.0

[node name="3" parent="Control/stage/rooms" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 463, 262 )
script = SubResource( 7 )

[node name="sprite" parent="Control/stage/rooms/3" index="2"]
flip_h = true

[node name="collision_shape_2d" parent="Control/stage/rooms/3" index="3"]
position = Vector2( 0, 2 )

[node name="tmr_next" parent="Control/stage/rooms/3" index="4"]
wait_time = 30.0

[node name="path_2d" parent="Control/stage/rooms/3" index="6"]
position = Vector2( -74, -11 )
curve = SubResource( 8 )

[node name="path_follow_2d" parent="Control/stage/rooms/3/path_2d" index="0"]
position = Vector2( 73, 0 )

[node name="ofuro" parent="Control/stage/rooms/3" index="7"]
position = Vector2( -74, 4 )

[node name="4" parent="Control/stage/rooms" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 463, 75 )
script = SubResource( 7 )

[node name="sprite" parent="Control/stage/rooms/4" index="2"]
flip_h = true

[node name="collision_shape_2d" parent="Control/stage/rooms/4" index="3"]
position = Vector2( 0, 2 )

[node name="tmr_next" parent="Control/stage/rooms/4" index="4"]
wait_time = 45.0

[node name="path_2d" parent="Control/stage/rooms/4" index="6"]
position = Vector2( -74, -11 )
curve = SubResource( 8 )

[node name="path_follow_2d" parent="Control/stage/rooms/4/path_2d" index="0"]
position = Vector2( 73, 0 )

[node name="ofuro" parent="Control/stage/rooms/4" index="7"]
position = Vector2( -74, 4 )

[node name="windows" type="Node2D" parent="Control/stage"]
editor/display_folded = true

[node name="1" parent="Control/stage/windows" instance=ExtResource( 6 )]
position = Vector2( 58, 129.503 )

[node name="2" parent="Control/stage/windows" instance=ExtResource( 6 )]
position = Vector2( 443, 129.608 )

[node name="3" parent="Control/stage/windows" instance=ExtResource( 6 )]
position = Vector2( 322.047, 129.542 )

[node name="4" parent="Control/stage/windows" instance=ExtResource( 6 )]
position = Vector2( 176.915, 129.439 )

[node name="5" parent="Control/stage/windows" instance=ExtResource( 6 )]
position = Vector2( 249, 30 )

[node name="6" parent="Control/stage/windows" instance=ExtResource( 6 )]
position = Vector2( 249, 213.353 )

[node name="climate_manager" type="Node2D" parent="Control/stage"]
editor/display_folded = true
script = ExtResource( 7 )

[node name="tmr_change" type="Timer" parent="Control/stage/climate_manager"]
wait_time = 30.0
autostart = true

[node name="player" type="KinematicBody2D" parent="Control"]
position = Vector2( 240.618, 119.078 )
z_index = 7
script = ExtResource( 8 )

[node name="animation_player" type="AnimationPlayer" parent="Control/player"]
autoplay = "walking"
anims/going_down = SubResource( 9 )
anims/going_up = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/walking = SubResource( 12 )

[node name="twn_gummy" type="Tween" parent="Control/player"]

[node name="sounds" type="Node2D" parent="Control/player"]
editor/display_folded = true

[node name="snd_jump0" type="AudioStreamPlayer" parent="Control/player/sounds"]
stream = ExtResource( 9 )
bus = "sfx"

[node name="snd_jump1" type="AudioStreamPlayer" parent="Control/player/sounds"]
stream = ExtResource( 10 )
bus = "sfx"

[node name="snd_grab" type="AudioStreamPlayer" parent="Control/player/sounds"]
stream = ExtResource( 11 )
bus = "sfx"

[node name="snd_throw" type="AudioStreamPlayer" parent="Control/player/sounds"]
stream = ExtResource( 12 )
bus = "sfx"

[node name="sprites" type="Sprite" parent="Control/player"]
editor/display_folded = true

[node name="mizuni" type="Sprite" parent="Control/player/sprites"]
texture = ExtResource( 13 )
vframes = 2
hframes = 5

[node name="range_action" type="Area2D" parent="Control/player"]
position = Vector2( 15, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/player/range_action"]
position = Vector2( -9.618, 2.922 )
shape = SubResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/player"]
position = Vector2( -1, 1 )
shape = SubResource( 14 )

[node name="pos_carry" type="Position2D" parent="Control/player"]
position = Vector2( 5, 3 )

[node name="coal" parent="Control" instance=ExtResource( 14 )]
position = Vector2( 150.689, 176 )

[node name="coal2" parent="Control" instance=ExtResource( 14 )]
position = Vector2( 337.939, 176 )

[node name="ice" parent="Control" instance=ExtResource( 15 )]
position = Vector2( 163, 176 )

[node name="ice2" parent="Control" instance=ExtResource( 15 )]
position = Vector2( 326.499, 176 )

[node name="GUI_layer" type="CanvasLayer" parent="."]
script = SubResource( 15 )

[node name="pause" type="Control" parent="GUI_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -290.0
margin_bottom = -290.0
script = SubResource( 16 )

[node name="twn_pause" type="Tween" parent="GUI_layer/pause"]

[node name="ctn_margin" type="MarginContainer" parent="GUI_layer/pause"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ctn_panel" type="PanelContainer" parent="GUI_layer/pause/ctn_margin"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 108.0
margin_top = 112.0
margin_right = 392.0
margin_bottom = 208.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = ExtResource( 16 )

[node name="ctn_margin" type="MarginContainer" parent="GUI_layer/pause/ctn_margin/ctn_panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 282.0
margin_bottom = 94.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ctn_vbox" type="VBoxContainer" parent="GUI_layer/pause/ctn_margin/ctn_panel/ctn_margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 270.0
margin_bottom = 82.0

[node name="str_paused" type="Label" parent="GUI_layer/pause/ctn_margin/ctn_panel/ctn_margin/ctn_vbox"]
margin_right = 260.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
text = "Paused"

[node name="hud" type="Node2D" parent="GUI_layer"]

[node name="sprite" type="Sprite" parent="GUI_layer/hud"]
position = Vector2( 249, 304 )
texture = ExtResource( 18 )

[node name="texture_progress" type="Node2D" parent="GUI_layer/hud"]
position = Vector2( -0.508957, -0.508545 )
script = SubResource( 17 )

[node name="bar" type="TextureProgress" parent="GUI_layer/hud/texture_progress"]
modulate = Color( 0.968627, 0.858824, 0.32549, 1 )
margin_left = 70.0
margin_top = 297.0
margin_right = 350.0
margin_bottom = 312.0
value = 100.0
texture_progress = ExtResource( 19 )

[node name="path_2d" type="Path2D" parent="GUI_layer/hud"]
position = Vector2( 1, 9 )
curve = SubResource( 18 )
script = SubResource( 19 )

[node name="path_follow_2d" type="PathFollow2D" parent="GUI_layer/hud/path_2d"]
position = Vector2( 475.157, 302.097 )
rotation = -3.14159
offset = 13.3894
loop = false

[node name="sprite" type="Sprite" parent="GUI_layer/hud/path_2d/path_follow_2d"]
scale = Vector2( 1, -1 )
texture = ExtResource( 20 )

[node name="splash" type="Node2D" parent="GUI_layer"]
pause_mode = 2
editor/display_folded = true
visible = false
position = Vector2( 0.5, 0 )
scale = Vector2( 1.00125, 1 )
script = SubResource( 20 )

[node name="twn" type="Tween" parent="GUI_layer/splash"]

[node name="splash" type="Control" parent="GUI_layer/splash"]
margin_right = 40.0
margin_bottom = 40.0

[node name="1" type="TextureRect" parent="GUI_layer/splash/splash"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 21 )

[node name="2" type="TextureRect" parent="GUI_layer/splash/splash"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 22 )
script = SubResource( 21 )

[node name="tmr_blink" type="Timer" parent="GUI_layer/splash/splash/2"]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Control/stage/climate_manager/tmr_change" to="Control/stage/climate_manager" method="_on_tmr_change_timeout"]
[connection signal="tween_completed" from="GUI_layer/splash/twn" to="GUI_layer/splash" method="_on_twn_tween_completed"]
[connection signal="timeout" from="GUI_layer/splash/splash/2/tmr_blink" to="GUI_layer/splash/splash/2" method="_on_tmr_blink_timeout"]

[editable path="Control/stage/rooms/2"]

[editable path="Control/stage/rooms/3"]

[editable path="Control/stage/rooms/4"]
